add vault